fixes back button on IE

--- a/assets/styles/components/_back.scss
+++ b/assets/styles/components/_back.scss
@@ -3,6 +3,7 @@
 	margin-bottom: 2em;
 
 	> img {
-		margin-right: 0.6em;	
+		margin-right: 0.6em;
+		width: auto;
 	}
 }
